<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/menu_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray"
        android:drawableLeft="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/coin_heading"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/coin"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/baseline_person_24" />

    <Button
        android:id="@+id/getCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        android:letterSpacing="@dimen/material_emphasis_disabled"
        android:text="@string/getCoin"
        android:textColorLink="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCoin">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/theme"
            android:onClick="home"
            android:text="@string/all"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/theme"
            android:onClick="academic"
            android:text="@string/academic"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/theme"
            android:onClick="general"
            android:text="@string/gen"
            android:textSize="15sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.346">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popularNowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:text="Popular Now"
                android:textFontWeight="700"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seeAllText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="See All"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="5dp"
                android:rowCount="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:background="@color/gray"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/book_img" />

                        <TextView
                            android:id="@+id/adName"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Product Name Book Name"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/adLocation"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/location_on_24"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Location:"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/adPostedTime"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:text="Posted: 2 hours ago"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/adPrice1"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:text="Price: "
                            android:textAlignment="viewEnd"
                            android:textFontWeight="800"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:background="@color/gray"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/book_img" />

                        <TextView
                            android:id="@+id/adName1"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Product Name Book Name"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/adLocation1"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/location_on_24"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="Location:"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/adPostedTimes"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:text="Posted: 2 hours ago"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/adPrice"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:text="Price: "
                            android:textAlignment="viewEnd"
                            android:textFontWeight="800"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>

            <TextView
                android:id="@+id/promtionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:text="Promotions"
                android:textFontWeight="700"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>